--- a/diplomarbeit/abstract.tex
+++ b/diplomarbeit/abstract.tex
@@ -1,18 +1,17 @@
 \section*{Kurzfassung} \todo{Kontrolle}
 
-Die Zielsetzung des Projekt BestShift, entwickelt von Schülern der Abteilung für Informationstechnologie am TGM, ist die Sammlung, Analyse und Verwendung von Daten, die für einen KFZ-Fahrenden interessant sein könnten. Durch die zwei Datenquellen, das Auto selber, mit welchem durch den Diagno- stikport kommuniziert wird, und der selbst entwickelte Car-PC, werden passende Darstellungen geboten, welche den Fahrstil des Nutzenden wiederspiegelt. 
-Durch die modulare Umsetzung des Car-PCs kann zu jedem Zeitpunkt ein neuer Sensor hinzugefügt werden. Zusätzlich dazu dient der Car-PC als ein Medium der Zwischenspeicherung und Erstverarbeitung der relevanten Information für die späteren Anwendungen durch die Applikationen. 
+Die Zielsetzung des Projekt BestShift, entwickelt von Schülern der Abteilung für Informationstechnologie am TGM, ist die Sammlung, Analyse und Verwendung von Daten, die für einen Fahrer eines Kraftfahrzeugs interessant sein könnten. Durch die zwei Datenquellen, das Auto selber, mit welchem durch den Diagnostikport (OBD-II) kommuniziert wird, und dem selbst entwickelte Car-PC, werden passende Darstellungen geboten. Durch die Kombinationen der Hauptfeatures, welche in unseren Applikationen implementiert sind, Schaltvorschlag, Fahrgastkomfortanalyse, und Verbrauchsanalyse, kann man durch numerisch wiederlegte Werte, angeben wie gut der Fahrstil eines Fahrers ist.
 
-Präzise, einfach zu verstehende Darstellungen und Features, die den Fahrstil der Nutzenden von BestShift verbessern können, sind mittels zwei Applikationen realisiert worden, wobei diese für unterschiedliche Szenarien konzipiert sind. Die erste Applikation ist entwickelt worden für Smartphone - für die Android Plattform. Die Android Applikation sammelt die benötigten Daten direkt vom Car-PC und kann somit beinahe Echtzeit-Darstellung erzeugen. Die Android-App ist außerdem für das hochladen der Sensordaten auf den BestShift Server zuständig. Von unserem Server aus kann dann die zweite Applikation, die Web-Applikation, die benötigten Ressourcen laden und weiter verarbeiten. Es ist zu erwähnen, dass die Web-App als die primäre Speicherungsstelle dient – alle Fahrten des Fahrers werden hier gespeichert und dieser kann sich alle retrospektiv ansehen. Zusätzlich dazu kann man mit der inkludierten Social Media Anbindung über seinen Fahrstil prahlen. 
+Die modulare Umsetzung des Car-PCs sorgt dafür, dass zu jedem Zeitpunkt ein neuer Sensor hinzugefügt werden kann. Zusätzlich dazu dient der Car-PC als ein Medium der Zwischenspeicherung und Erstverarbeitung der relevanten Information für die späteren Anwendungen durch die Applikationen. 
 
-Durch die Kombinationen der Hauptfeatures, Schaltvorschlag, Fahrgastkomfortanalyse, und Verbrauchsanalyse, kann man durch numerisch wiederlegte Werte, angeben wie gut der Fahrstil eines Fahrers ist.
+Präzise, einfach zu verstehende Darstellungen und Features, die den Fahrstil der Nutzenden von BestShift verbessern können, sind mittels zwei Applikationen realisiert worden, wobei diese für unterschiedliche Szenarien konzipiert sind. 
+
+Die erste Applikation ist für den mobilen Gebrauch konzipiert, und ist für Android Smartphones implementiert. Die Android Applikation sammelt die benötigten Daten direkt vom Car-PC und kann somit beinahe Echtzeit-Darstellung erzeugen. Die Android-App ist außerdem für die Speicherung der Sensordaten auf den BestShift Server zuständig. Von unserem Server aus kann dann die zweite Applikation, die Web-Applikation, die benötigten Ressourcen laden und weiter verarbeiten. Es ist zu erwähnen, dass die Web-App als die primäre Speicherungsstelle dient – alle Fahrten des Fahrers werden hier gespeichert und dieser kann sich alle retrospektiv ansehen. Zusätzlich dazu ist es möglich die Bewertung mit Freunden und Familie, mittels der integrierten Social Media Anbindung, zu teilen. 
 
 \section*{Abstract} \todo{Kontrolle}
 
-The Project BestShift, developed by students from the department of Information Technology at the TGM, has the main goals of extracting, analysing and processing data relevant for drivers of automobiles. Through the two main data sources, the car itself (interfaced through the diagnostics port) as well as the self-developed Car-PC, an accurate representation of how well a driver is driving can be given.
+The Project BestShift, developed by students from the department of Information Technology at the TGM, has the main goals of extracting, analysing and processing data relevant for drivers of automobiles. Through the two main data sources, the car itself (interfaced through the diagnostics port) as well as the self-developed Car-PC, an accurate representation of how well a driver is driving can be given. BestShift’s three main features, realized in both Applications, are a gear-shift-recommendation, an analysis of how comfortable the drive is, as well as a fuel consumption analysis. However, through a combination of the features, one can very easily determinate if a driver’s driving style is environmentally friendly.
 
-A modular approach has been chosen for the Car-PC – which means that at any given moment a new sensor can be added and a wider spectrum of representable data is given. The Car-PC additionally serves as a secondary data hub, as the information, provided through the OBD-II, is also stored on it. It is actually not necessary to use all the data provided by the car, hence the Car-PC also filters out the relevant data for the visualisations in our applications.
+The Car-PC is implemented with a modular approach – which means that at any given moment a new sensor can be added and a wider spectrum of representable data is given. The Car-PC additionally serves as a secondary data hub, as the information, provided through the OBD-II, is also stored on it. It is actually not necessary to use all the data provided by the car, hence the Car-PC also filters out the relevant data for the visualisations in our applications.
 
 To give accurate representations of the data as well as giving features that can enhance a driver’s style of driving, BestShift provides two applications for different scenarios. One being a smartphone application, developed for the Android platform. The Android Application collects the data from the Car-PC directly and is thereby able to give almost real-time graphics with little to no delay. It is also responsible for pushing the sensor data onto the BestShift Servers where the second application – the Web-Application – can further use it. The Web-Application’s focus lies within a wider area. It primarily serves the purpose of saving all car trips by a driver. A driver can use the Web-Application to retrospectively view all of his trips and compare them to other driver’s trips. With the Web-App’s included Social Media integration, the driver can even boast about how good of a driver he is amongst his friends.
-
-BestShift’s three main features, realized in both Applications, are a gear-shift-recommendation, an analysis of how comfortable the drive is, as well as a fuel consumption analysis. However, through a combination of the features, one can very easily determinate if a driver’s driving style is environmentally friendly.
