--- a/diplomarbeit/anerkennungen.tex
+++ b/diplomarbeit/anerkennungen.tex
@@ -1,3 +1,3 @@
 \section*{Anerkennungen}
 
-Wir widmen diese Arbeit jenen Personen die uns gezeigt haben, dass unser Aufwand wertgeschätzt wird; die uns in den schwierigen Phasen unterstützt und motiviert haben; und die uns auch auf einer persönlichen Ebene weitergebracht haben. Insbesondere bedanken wir uns bei Prof. Dipl.-Ing. Heinz Neuburger und unserem unersetzlichen Projektbetreuer Erhard List.
+Wir widmen diese Arbeit jenen Personen die uns gezeigt haben, dass unser Aufwand wertgeschätzt wird; die uns in den schwierigen Phasen unterstützt und motiviert haben und die uns auch auf einer persönlichen Ebene weitergebracht haben. Insbesondere bedanken wir uns bei Prof. Dipl.-Ing. Heinz Neuburger und unserem unersetzlichen Projektbetreuer Erhard List.
