--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -22,16 +22,15 @@ Heutzutage spricht man von der Einheit Gramm pro Kilometer [g/km] als normierte 
 Der Lenker eines PKW hat Einfluss auf seinen \ce{CO2}-Ausstoß, indem dieser bei starken und überflüssigen Beschleunigungsmanövern
 zu diesem Zeitpunkt mehr Schadstoffe produziert als nötig.
 Mit diesem Diplomprojekt, wollen wir Fahrenden ein Werkzeug in die Hand geben, ihren \ce{CO2}-Ausstoß während und nach der Fahrt
-einschätzen zu können. Damit haben sie die Möglichkeit ihre Fahrweise in Hinblick auf den \ce{CO2}-Ausstoß zu verbessern. \nextline
+einschätzen zu können. Damit haben sie die Möglichkeit ihre Fahrweise in Hinblick auf den \ce{CO2}-Ausstoß zu verbessern.
 
-
-\textbf{Treibhauseffekt}
 \begin{wrapfigure}{r}{0.6\textwidth}
     \centering
     \includegraphics[width=0.6\textwidth]{images/treibhaus1}
     \caption{Der Treibhauseffekt \cite{BOZH.ch1-co2-umwelt.treibhaus1}}
 \end{wrapfigure}
- 
+
+\textbf{Treibhauseffekt\newline}
 \ce{CO2} gilt als eines der häufigsten Treibhausgase.
 Das Kohlenstoffdioxid steigt bis zur Atmosphäre auf und bildet dort eine \textit{Mauer}.
 Sonnenstrahlen können zwar ohne weiteres durch, doch nicht so leicht wieder raus. Das heisst, dass die Sonnenstrahlen,
