--- a/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
+++ b/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
@@ -1,21 +1,7 @@
 \lfoot{Autor: Raphael Simsek}
 \subsection{Analyse und Verbesserung des Fahrstils}
 
-\todo{Bezug auf wie sie in der Graphik unten erkennen können, auf wie sie in Abb. 1 erkennen können ändern}
-\todo{Sätze mit max. 1 Beistrich formulieren}
-\todo{Reihenfolge der Paragraphen ändern}
-Häufig kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen oder wünschenswerten Fahrstil näher bringen. Dies ist nämlich oft ein zeitintensiver Prozess ist. Aus diesem Grund wurden sich Gedanken dazu gemacht, wie man diese Situation verbessern kann.
-
-\subsubsection{Was soll umgesetzt werden?}
-\begin{itemize}
-	\item Echtzeit Messung und Errechnung der Beschleunigungskräfte, des Schadstoffausstoßes und eines Schaltvorschlags mittels der OBD-II Schnittstelle
-	\item Darstellung des Schaltvorschlags, Fahrkomforts und Schadstoßes in einer Android Applikation
-	\item retrospektive Analyse der Fahrkomfortanalyse einer Fahrt
-	\item retrospektive Analyse des errechneten Verbrauchs einer Fahrt
-	\item Darstellung der retrospektiven Analyse mittels einer Web-Applikation
-	\item Sharing Möglichkeiten für die Analyse seiner Fahrt
-	\item Realisierung eines Car-PC
-\end{itemize}
+Aus persönlicher Erfahrung geht hervor, dass es bei der Ausbildung zum Fahrer eines Kraftfahrzeugs einigen Verbesserungsbedarf gibt. Häufig kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen oder wünschenswerten Fahrstil näher bringen. Dies ist nämlich oft ein zeitintensiver Prozess ist. Aus diesem Grund wurden sich Gedanken dazu gemacht, wie man diese Situation verbessern kann.
 
 \subsubsection{Sharing}
 Am Beginn des Projektes wurde nach bereits bekannten Systemen gesucht, um seinen Fahrstil nachhaltig zu verbessern. Bei dieser Suche stach die Verbreitung von Apps mit \textit{Sharing}-Funktion heraus. Es gibt nämlich bereits in vielen anderen Bereichen Apps, die sich das \textit{Sharing}-Prinzip zu Nutze machen und damit äußerst erfolgreich Ihre Kunden zu einer Veränderung Ihrer Gewohnheiten bringen \cite{SIMR.CH1-fahrstil-analyse.GewohnheitenLoslassen}. Eines der bekanntesten österreichischen Beispiele ist das App-System von Runtastic \cite{SIMR.CH1-Fahrstil-Analyse.BusinessplanRuntastic}.
@@ -56,7 +42,7 @@ Eine Live-Messung von \ce{CO2} Werten während der Fahrt ist zumeist eine Schät
 
 \subsubsection{Analysefunktion}
 Besonders für Fahranfänger kann solch eine Funktionalität von großer Hilfe als lernunterstützendes Medium sein, da momentan ein Fahrschüler nach seiner Fahrstunde nur ein subjektives Feedback seines Fahrlehrers bekommt. Wie ließe sich eine solche Lernunterstützung also umsetzen?
-Man könnte dem Fahrschüler am Ende der Fahrstunde eine faktenbasierte Übersicht über seine Leistung während der Fahrstunde geben, welche er dann auch mitnehmen kann und wodurch dieser weiß worauf er bei seiner nächsten Übungsmöglichkeit achten sollte. Die Übersicht soll ausgedruckt oder mittels unserer Webapplikation einsehbar sein (siehe Abb. \autoref{imgWebapp}). Ausführliche Informationen zur Umsetzung der Webapplikation sind unter Kapitel 3.7 - Webapplikation abrufbar.
+Man könnte dem Fahrschüler am Ende der Fahrstunde eine faktenbasierte Übersicht über seine Leistung während der Fahrstunde geben, welche er dann auch mitnehmen kann und wodurch dieser weiß worauf er bei seiner nächsten Übungsmöglichkeit achten sollte. Die Übersicht soll ausgedruckt oder mittels unserer Webapplikation einsehbar sein (siehe Abb. \autoref{Fig:imgWebapp}). Ausführliche Informationen zur Umsetzung der Webapplikation sind unter Kapitel 3.7 - Webapplikation abrufbar.
 
 \todo{Remove Placeholder image of web application}
 \begin{figure}[!htb]\centering
