--- a/diplomarbeit/sections/ch1_introduction/main.tex
+++ b/diplomarbeit/sections/ch1_introduction/main.tex
@@ -1,6 +1,23 @@
 \section{Einführung}
 \label{sec:intro}
 
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[scale=0.6]{images/konzept}
+	\caption{Konzept des BestShift Systems}
+	\label{fig:konzept1}
+\end{figure}
+
+Abbildung \ref{fig:konzept1} zeigt wie die einzelnen Komponenten des BestShift Systems miteinaner interagieren. Das System hat letzendlich folgende Aufgaben zu erfüllen:
+
+\begin{itemize}
+	\item Echtzeit Messung und Errechnung der Beschleunigungskräfte, des Schadstoffausstoßes und eines Schaltvorschlags mittels der OBD-II Schnittstelle
+	\item Realisierung eines Car-PC für einen größeren Pool an Informationen
+	\item Darstellung der Hauptfeatures: Schaltvorschlags, Fahrkomforts und Schadstoßes in einer Android Applikation und einer Web-Applikation
+	\item Retrospektive Analyse und Vergleich der Hauptfeatures in der Web-App
+	\item Sharing Möglichkeiten für die Analyse seiner Fahrt
+\end{itemize}
+
 \input{sections/ch1_introduction/fahrstil-analyse.tex}
 \input{sections/ch1_introduction/co2-umwelt.tex}
 \input{sections/ch1_introduction/bestshift.tex}
