--- a/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
@@ -77,7 +77,7 @@ Grundsätzlich gibt es vier große Gruppen von NoSQL Datenbanken \cite{MELD.CH2-
 
 
 	\item \textbf{Document Databases\newline}
-	Document Store Datenbanken sind jene Datenbanken bei welchen die Daten mittels einer quasi strukturiereten Datei gespeichert werden (siehe Abbildung \ref{ig:documentdb}). Oft werden sturkturen wie JSON, CSV, oder XML verwendet. Intern werden die Daten dann mittels der bereits bekannten Key-Value Methodik gespeichert - der einzige Unterschied liegt also in der Verarbeitungweise der Anfragen des Users. Hierbei ist vor allem auf die Performance und horizontale Skalierbarkeit zu achten. Die Files, oder Dokumente, in einer Document-Oriented Datenbank sind ähnlich zu jenen einer relationalen Datenbank, aber der große Unterschied hierbei ist, dass diese an kein Schema gebunden und somit um einiges flexibler sind. Diese Dokumente sind mittels einem eindeutigen Key adressiert, welcher das File auch repräsentiert. Diese Keys können einfache Strings oder ganze Pfade sein.
+	Document Store Datenbanken sind jene Datenbanken bei welchen die Daten mittels einer quasi strukturiereten Datei gespeichert werden (siehe Abbildung \ref{fig:documentdb}). Oft werden sturkturen wie JSON, CSV, oder XML verwendet. Intern werden die Daten dann mittels der bereits bekannten Key-Value Methodik gespeichert - der einzige Unterschied liegt also in der Verarbeitungweise der Anfragen des Users. Hierbei ist vor allem auf die Performance und horizontale Skalierbarkeit zu achten. Die Files, oder Dokumente, in einer Document-Oriented Datenbank sind ähnlich zu jenen einer relationalen Datenbank, aber der große Unterschied hierbei ist, dass diese an kein Schema gebunden und somit um einiges flexibler sind. Diese Dokumente sind mittels einem eindeutigen Key adressiert, welcher das File auch repräsentiert. Diese Keys können einfache Strings oder ganze Pfade sein.
 
 	Anwendungsgebiete von dieser Art von Datenbank sind Applikationen wie Content Management Systeme, Blog Software, usw. 
 
