--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -9,23 +9,22 @@ Eine APK ist ein Android-Paket, welches alle Inhalte einer Android App enthält.
 Die APK-Datei wird dann auf das Android-Gerät installiert. 
 
 
-\textbf{Native vs HTML5 vs Hybrid}
+\textbf{Native vs HTML5 vs Hybrid} \newline
 Bei der Umsetzung unserer Android Applikation, hatten wir die Entscheidung, wie wir die Android App erstellen. 
-Da Android mehrere Programmierarten unterstützt musste evaluiert werden welche Programmiermodule für unsere App am Besten geeignet ist. \nextline
+Da Android mehrere Programmierarten unterstützt musste evaluiert werden welche Programmiermodule für unsere App am besten geeignet ist. \nextline
 
 \textbf{Native\newline} 
 Der Vorteil an Native Apps ist, das sie auf die Hardware wie z.B. Kamera und GPS zugriff haben. 
 Weiterhin ist der Verkauf nicht sehr schwer, da es auf Appstore draufgeladen werden kann. 
 Für native Apps wird auf der Android-Plattform die Sprache Java verwendet.
 Native Apps zeigen die beste Performance.
-Die Dokumentation zu Native Apps ist am Besten, da es über 2500 Bücher zur Android Entwicklung gibt.
-Für Nativ Apps werden Entwicklungsumgebungen-IDE(Integrated Developement Enviroment) verwendet um die gewünschte App zu Programmieren.\nextline
-
+Die Dokumentation zu Nativen Apps ist am besten, da es über 2500 Bücher zur Android Entwicklung gibt.
+Für nativ Apps werden Entwicklungsumgebungen-IDE(Integrated Developement Enviroment) verwendet um die gewünschte App zu Programmieren.\nextline
 
 
 \textbf{HTML5\newline} 
 Da eine HTML 5 Applikation über den Webbrowser laufen kann, sind die Entwickler nicht von AppStore oder anderen Plattformen abhängig. 
-HTML5 verwendet die Standard Web Technologien, wie JavaScript und CSS.
+HTML5 verwendet Standard Web Technologien, wie JavaScript und CSS.
 HTML5 Applikationen werden über Browser abgespielt, wobei jedes Gerät auf die Browser zugreifen kann und dadurch die App auf mehreren Plattformen abgespielt werden kann. \nextline
 
 \textbf{Hybrid\newline} 
@@ -41,9 +40,9 @@ Zum Verwenden der AVD müssen System-image Packages runter geladen werden, wodur
 Eine API(Application Programming Interface) ist die Version der Programmierstelle, wobei mehrere Feauters auf höheren Versionen möglich sind. 
 Eine Zuordnung zu einem System-Image: Sie können festlegen, welche Version der Android-Plattform auf dem virtuellen Gerät ausgeführt werden. Sie können eine Version der Standard-Android-Plattform oder das System-Image mit einem SDK Add-on verpackt wählen.
 
-Es können so viele AVDS erstellt werden, basierend auf das Devicetypen mit denen man arbeiten möchte.
-Beachten Sie folgende Punkte, wenn sie system images für ihre AVD auswählen:
-Der API level für das Device ist wichtig, da einige Applikationen auf niedrigeren API Level nicht laufen können. Wenn sie libarys verwenden müsste beachtet werden ab welche API Version die Libary verfügbar ist, da das Arbeiten damit nachher nicht mehr möglich ist.
+Es können so viele AVDs erstellt werden, basierend auf das Devicetypen mit denen man arbeiten möchte.
+Beachten Sie folgende Punkte, wenn sie System-image für ihre AVD auswählen:
+Der API Level für das Device ist wichtig, da einige Applikationen auf niedrigeren API Level nicht laufen können. Wenn sie libarys verwenden müsste beachtet werden ab welche API Version die Libary verfügbar ist, da das Arbeiten damit nachher nicht mehr möglich ist.
 \textbf{Virtual-Device-erstellen}
 \begin{wrapfigure}{l}{0.3\textwidth}
 	\centering
