--- a/diplomarbeit/sections/ch1_introduction/bestshift.tex
+++ b/diplomarbeit/sections/ch1_introduction/bestshift.tex
@@ -1,7 +1,7 @@
 \lfoot{Autor: Faiku Fitim}
 \subsection{Das Projekt BestShift}
 
-BestShift ist ein Projekt, welches dem Fahrer Informationen während- und nach der Fahrt bieten soll. 
+BestShift ist ein Projekt, welches dem Faikuthrer Informationen während- und nach der Fahrt bieten soll. 
 Dazu werden in unterschiedlichen Teilen des Projektes 
 diverse einzelne Komponenten einer hybriden Android Applikation und einer Hardware Schnittstelle für das ODB-II 
 Interface entwickelt. 
