--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -43,18 +43,20 @@ Eine Zuordnung zu einem System-Image: Sie können festlegen, welche Version der 
 Es können so viele AVDs erstellt werden, basierend auf das Devicetypen mit denen man arbeiten möchte.
 Beachten Sie folgende Punkte, wenn sie System-image für ihre AVD auswählen:
 Der API Level für das Device ist wichtig, da einige Applikationen auf niedrigeren API Level nicht laufen können. Wenn sie libarys verwenden müsste beachtet werden ab welche API Version die Libary verfügbar ist, da das Arbeiten damit nachher nicht mehr möglich ist.
-\textbf{Virtual-Device-erstellen}
-\begin{wrapfigure}{l}{0.3\textwidth}
-	\centering
-	\includegraphics[width=0.4\textwidth]{images/Create-virtual-device}
-	\caption{Erstellen einer AVD in Android Studio}
-\end{wrapfigure}
 
-\textbf{Android Virtual Device}
-\begin{wrapfigure}{r}{0.3\textwidth}
+
+\begin{figure}[!tbp]
 	\centering
-	\includegraphics[width=0.4\textwidth]{images/AVD}
-	\caption{AVD}
-\end{wrapfigure}
+	\begin{minipage}[b]{0.4\textwidth}
+		\includegraphics[width=\textwidth]{images/Create-virtual-device.jpg}
+		\caption{Erstellen einer AVD in Android Studio}
+	\end{minipage}
+	\hfill
+	\begin{minipage}[b]{0.4\textwidth}
+		\includegraphics[width=\textwidth]{images/AVD.jpg}
+		\caption{Android Virtual Device}
+	\end{minipage}
+\end{figure}
+
 
 \clearpage % DO NOT REMOVE
