--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -581,10 +581,10 @@ note = {Accessed on 30.03.2016}
     note = {Accessed on 07.04.2016}
 }
 
-@misc{Faik.CH2-app-fundam,
-	author = {HTML Panda},
+@misc{Faik.CH2-app-fundam_Vergleich,
+	author = {Daniel Würstl},
 	year = {2014},
-	title = {Native, Hybrid or HTML5 App: Explore Features to Choose Best for Your Business},
-	howpublished = "\url{http://www.htmlpanda.com/blog/native-hybrid-or-html5-app-explore-features-to-choose-best-for-your-business/}",
+	title = {Unterschiede und Vergleich native Apps vs. Web Apps},
+	howpublished = "\url{http://www.app-entwickler-verzeichnis.de/faq-app-entwicklung/11-definitionen/107-unterschiede-und-vergleich-native-apps-vs-web-apps}",
 	note = {Accessed on 07.04.2016}
 }
