Changed sources and so on

--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -28,8 +28,7 @@ HTML5 verwendet Standard Web Technologien, wie JavaScript und CSS.
 HTML5 Applikationen werden über Browser abgespielt, wobei jedes Gerät auf die Browser zugreifen kann und dadurch die App auf mehreren Plattformen abgespielt werden kann. \nextline
 
 \textbf{Hybrid\newline} 
-Hybrid Apps sind eine Mischung aus nativ und HTML5 Apps. Hybrid bietet das Beste aus beiden Welten. Das Design wird mittels HTML5 und CSS erstellt, wobei sich dahinter ein JavaScript-Code befindet. Hybrid Apps sind genauso auf jede Plattform abspielbar, wobei sie für die Plattform entsprechend umprogrammiert müssten.   
-\cite{Faik.CH2-app-fundam_Vergleich} 
+Hybrid Apps sind eine Mischung aus nativ und HTML5 Apps. Hybrid bietet das Beste aus beiden Welten. Das Design wird mittels HTML5 und CSS erstellt, wobei sich dahinter ein JavaScript-Code befindet. Hybrid Apps sind genauso auf jede Plattform abspielbar, wobei sie für die Plattform entsprechend umprogrammiert müssten. \cite{Faik.CH2-app-fundam_Vergleich} 
 \nextline
 
 \subsubsection{Android Virtual Device}
