--- a/diplomarbeit/sections/ch3_implementierung/android-app.tex
+++ b/diplomarbeit/sections/ch3_implementierung/android-app.tex
@@ -77,7 +77,7 @@ Das Liniendiagramm wurde mittels der MPAndroidChart Libary erstellt. Die Linien 
  	\end{minipage}
  	\hfill
  	\begin{minipage}[b]{0.4\textwidth}
- 		\includegraphics[width=\textwidth]{images/Liniendiagramm}
+ 		\includegraphics[width=\textwidth]{images/Kammscherkreis-u}
  		\caption{Kammscher Kreis mittels ondraw() - canvas}
  	\end{minipage}
 \end{figure}
