--- a/diplomarbeit/erklaerung.tex
+++ b/diplomarbeit/erklaerung.tex
@@ -7,19 +7,4 @@ Wien, \today
 
 \vspace{1.5cm}
 
-\todo{MELD: Unterschreiben und inkludieren}
-
-\begin{flushright}
-	\begin{tabular}{r}
-	 \makebox[2.5in]{\hrulefill}\\
-	 Hüseyin Bozkurt\\[8ex]
-	 \makebox[2.5in]{\hrulefill}\\
-	 Fitim Faiku\\[8ex]
-	 \makebox[2.5in]{\hrulefill}\\
-	 Daniel Melichar\\[8ex]
-	 \makebox[2.5in]{\hrulefill}\\
-	 Tobias Perny\\[8ex]
-	 \makebox[2.5in]{\hrulefill}\\
-	 Raphael Simsek\\[8ex]
-	\end{tabular}
-\end{flushright}
+\includegraphics[width=0.5\textwidth, right]{special/eides}
