--- a/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
+++ b/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
@@ -15,7 +15,7 @@ Der Kreis ist so aufgebaut, dass in Norden de Bremskräfte angezeigt werden, in 
 Es ist also alles verkehrt.
 \begin{figure}[!htb]\centering
 	\includegraphics[width=0.5\textwidth]{images/kammsherkreis}
-	\caption{Beschleunigungswerte einer Autofahrt dargestellt als Kammscher Kreis} \cite{FAIF.CH3-fahrkomfortanalyse.KammscherKreis}}\label{Fig:Kammsher-Kreis}
+	\caption{Beschleunigungswerte einer Autofahrt dargestellt als Kammscher Kreis} \cite{FAIF.CH3-fahrkomfortanalyse.KammscherKreis}\label{Fig:Kammsher-Kreis}
 \end{figure}
 
 \subsubsection{Implementierung}
