--- a/diplomarbeit/special/preamble.tex
+++ b/diplomarbeit/special/preamble.tex
@@ -26,6 +26,7 @@
 \usepackage{mhchem}
 \usepackage{wrapfig}
 \usepackage{accsupp}
+\usepackage[export]{adjustbox}
 \usepackage{dirtree}
 \usepackage[headsep=1cm,headheight=3cm,hmargin=2cm,vmargin=2.5cm]{geometry}
 \usepackage[nolist]{acronym}
